.test/b3-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: b3-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: b3-api
  template:
    metadata:
      labels:
        app: b3-api
    spec:
      containers:
        - name: b3-api-containers
          image: us-central1-docker.pkg.dev/b3-api-354219/b3-storage/b3-api
          resources:
            requests:
              memory: "256M"
              cpu: "250m"
            limits:
              memory: "512M"
              cpu: "500m"
          ports:
            - containerPort: 4000
