.test/b3-service.yml
apiVersion: v1
kind: Service
metadata:
  name: b3-service
spec:
  selector:
    app: b3-api
  type: NodePort
  ports:
    - protocol: TCP
      port: 80
      targetPort: 4000
