.test/b3-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: b3-api-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: b3-api-ip
spec:
  tls:
  - secretName: cert-b3-api
  rules:
  - host: rodrigodesoto.com.br
    http:
      paths:
      - pathType: ImplementationSpecific
        backend:
          service:
            name: b3-service
            port:
              number: 80
